tests/paczka1/fuzzy1/58941939.err
Error in line 15: S762 S762 3,1
Error in line 32: zEujMic4p S762 74,1
Error in line 34: LSbK S762 97,8
Error in line 40: S762 S762 14,79
